--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
         <div class="card z-depth-2">
             <div class="card-content">
                 
-                <h5>The Marketplace</h5>
+                <h5>CS 5200 Database Management System</h5>
 
                 <p class="custom-font-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus ullam, odit iure incidunt inventore praesentium consectetur in animi rerum labore ab esse ex deleniti deserunt quaerat sapiente sunt quis a?</p>
                 <a href="{% url 'app:placements' %}" class="btn waves-effect waves-light pink" style="margin-top: 1rem;">
