--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,9 @@
                 
                 <h5>CS 5200 Database Management System</h5>
 
-                <p class="custom-font-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus ullam, odit iure incidunt inventore praesentium consectetur in animi rerum labore ab esse ex deleniti deserunt quaerat sapiente sunt quis a?</p>
+                <p class="custom-font-1">Our stock bidding platform provides a unique and efficient way for investors to buy and sell stocks. 
+                                         Instead of the traditional market order system, our platform utilizes a bidding system 
+                                         that allows users to place bids and offers for specific stocks.</p>
                 <a href="{% url 'app:placements' %}" class="btn waves-effect waves-light pink" style="margin-top: 1rem;">
                         <i class="material-icons left">store</i>visit marketplace</a>
                 <img class="responsive-img fade-in" src="{% static 'austin-distel-1555609-unsplash.jpg' %}" alt="">
@@ -27,7 +29,7 @@
         <div class="card z-depth-2">
             <div class="card-content">
                 <h5>
-                    News (July)
+                    Group 3
                 </h5>
                 <p class="custom-font-1">Sunt excepteur do culpa velit consequat deserunt aute deserunt. Voluptate sit cillum cillum nostrud. Esse duis eu ut minim ad excepteur consequat amet est. Ullamco Lorem tempor excepteur veniam do ea incididunt anim eu non est eu voluptate
                     adipisicing.</p>
