--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,8 +2,16 @@
         <div class="container">
           <div class="row">
             <div class="col l4 s12">
-              <h5 class="white-text">Anim eiusmod tempor.</h5>
-              <p class="grey-text text-lighten-4 class="custom-font-1"">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ea deserunt ipsa harum, sint commodi sed reprehenderit dolor cupiditate distinctio dolores a minus repudiandae quibusdam facere. Reprehenderit itaque sequi deserunt.</p>
+              <h5 class="white-text">CS 5200 Database Management System</h5>
+              <h6>Group 3</h6>
+              <!-- <p class="grey-text text-lighten-4 class="custom-font-1"">Group 3</p> -->
+              <p class="grey-text text-lighten-4 class="custom-font-1"">Han Min</p>
+              <p class="grey-text text-lighten-4 class="custom-font-1"">Muqing Fan</p>
+              <p class="grey-text text-lighten-4 class="custom-font-1"">Varun Kabra</p>
+              <p class="grey-text text-lighten-4 class="custom-font-1"">Yiqing Zhao</p>
+              <p class="grey-text text-lighten-4 class="custom-font-1"">Ashay Panchal</p>
+
+
             </div>
 
             <div class="col l4 offset-l4 s12">
