--- a/templates/home.html
+++ b/templates/home.html
@@ -31,8 +31,11 @@
                 <h5>
                     Group 3
                 </h5>
-                <p class="custom-font-1">Sunt excepteur do culpa velit consequat deserunt aute deserunt. Voluptate sit cillum cillum nostrud. Esse duis eu ut minim ad excepteur consequat amet est. Ullamco Lorem tempor excepteur veniam do ea incididunt anim eu non est eu voluptate
-                    adipisicing.</p>
+                <p class="custom-font-1">When you want to buy a stock, you place a bid specifying the price you are willing to 
+                    pay and the number of shares you want to purchase. When you want to sell a stock, 
+                    you place an offer specifying the price you are willing to sell at and the number of shares you want to sell.
+
+                </p>
                 <p class="custom-font-1"><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum culpa neque rerum sit maiores blanditiis et, dolorem labore, architecto harum explicabo optio nemo quo aut. Pariatur cum laboriosam id vel.</p>
                 <p class="custom-font-1"><br>Velit et anim ea occaecat mollit enim commodo fugiat nisi anim fugiat. Fugiat ut occaecat consequat qui ex sunt proident esse aliquip adipisicing Lorem. Ullamco reprehenderit cupidatat ipsum non voluptate magna occaecat ullamco veniam
                     excepteur. Minim duis nostrud ex enim laboris minim irure dolore dolor aute occaecat dolor. Cillum do labore dolor consectetur fugiat enim voluptate. Sunt esse commodo laboris ut ipsum tempor nisi amet id anim aliqua aliquip fugiat.</p>
@@ -40,7 +43,7 @@
             </div>
         </div>
 
-        <div class="card z-depth-2">
+        <!-- <div class="card z-depth-2">
             <div class="card-content">
                 <h5>
                     News (June)
@@ -66,7 +69,7 @@
                     excepteur. Minim duis nostrud ex enim laboris minim irure dolore dolor aute occaecat dolor. Cillum do labore dolor consectetur fugiat enim voluptate. Sunt esse commodo laboris ut ipsum tempor nisi amet id anim aliqua aliquip fugiat.</p>
                 <img class="responsive-img fade-in" src="{% static 'lycs-architecture-744230-unsplash.jpg' %}" alt="">
             </div>
-        </div>
+        </div> -->
 
     </section>
 </section>
