--- a/templates/register.html
+++ b/templates/register.html
@@ -11,12 +11,13 @@
                                 <h5>Registration page</h5>
                                 {{ form.as_p }}
                                 <div class="center">
-                                    <button style="margin-top: 1rem;" class="btn pink waves-effect waves-light" type="submit">Create Account</button>
+                                    <button style="margin-top: 1rem;" class="btn pink waves-effect waves-light"
+                                        type="submit">Create Account</button>
                                 </div>
                                 <a href="{% url 'app:home' %}" style="margin-top: 1rem;">Go back to home page.</a>
 
                             </form>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -24,4 +25,4 @@
         </section>
     </section>
 </main>
-{% include 'footer.html' %} {% endblock content %}
+{% endblock content %}
