--- a/templates/about.html
+++ b/templates/about.html
@@ -6,16 +6,18 @@
         <article class="card">
             <div class="card-content">
                 <h4>About</h4>
- style-enhancement
-                <p class="custom-font-1">This application was built as a side project, in order to learn how to design
-                    and build a bidding system from scratch. The theme is based on capital raising for companies. It
-                    includes an auth system, marketplace, companies, placements,
-                    dashboard, mobile friendly design. I used Django mainly, to develop this application.</p>
             </div>
 
-                <p class="custom-font-1">Welcome to our bidding platform, a comprehensive project developed by Group 11 of the Spring 2024 CS 5200 class at Northeastern University. Our team, comprised of Han Min, Muqing Fan, Yiqing Zhao, Varun Kabra, and Ashay Amish Panchal, is delighted to introduce you to this platform. Crafted with diligence, our website is built on the robust Django framework, backed by a MySQL database. We have also leveraged the capabilities of Google Cloud for deploying our database, ensuring reliability and scalability. We appreciate your interest in our project and extend our sincerest thanks for visiting our website.</p>
+                <p class="custom-font-1">Welcome to our bidding platform, a comprehensive project developed by Group 11 
+                                         of the Spring 2024 CS 5200 class at Northeastern University. Our team, 
+                                         comprised of Han Min, Muqing Fan, Yiqing Zhao, Varun Kabra, and Ashay Amish Panchal, 
+                                         is delighted to introduce you to this platform. Crafted with diligence, 
+                                         our website is built on the robust Django framework, backed by a MySQL database. 
+                                         We have also leveraged the capabilities of Google Cloud for deploying our database, 
+                                         ensuring reliability and scalability. We appreciate your interest in our project and 
+                                         extend our sincerest thanks for visiting our website.</p>
 </div>
-      main
+      
         </article>
         <article class="card">
             <div class="card-content">
