--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 
         <div class="card z-depth-2">
             <div class="card-content">
- homepage-changes
+
                 
                 <h5>CS 5200 Database Management System</h5>
 
@@ -23,7 +23,7 @@
                                          that allows users to place bids and offers for specific stocks.</p>
                 <a href="{% url 'app:placements' %}" class="btn waves-effect waves-light pink" style="margin-top: 1rem;">
                         <i class="material-icons left">store</i>visit marketplace</a>
-                <img class="responsive-img fade-in" src="{% static 'austin-distel-1555609-unsplash.jpg' %}" alt="">
+                <img class="responsive-img fade-in" src="{% static 'homepage_stock.jpg' %}" alt="">
             </div>
         </div>
 
@@ -33,17 +33,18 @@
                 <h5>
                     Group 3
                 </h5>
- homepage-changes
+
                 <p class="custom-font-1">When you want to buy a stock, you place a bid specifying the price you are willing to 
                     pay and the number of shares you want to purchase. When you want to sell a stock, 
                     you place an offer specifying the price you are willing to sell at and the number of shares you want to sell.
-
                 </p>
-                <p class="custom-font-1"><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum culpa neque rerum sit maiores blanditiis et, dolorem labore, architecto harum explicabo optio nemo quo aut. Pariatur cum laboriosam id vel.</p>
-                <p class="custom-font-1"><br>Velit et anim ea occaecat mollit enim commodo fugiat nisi anim fugiat. Fugiat ut occaecat consequat qui ex sunt proident esse aliquip adipisicing Lorem. Ullamco reprehenderit cupidatat ipsum non voluptate magna occaecat ullamco veniam
-                    excepteur. Minim duis nostrud ex enim laboris minim irure dolore dolor aute occaecat dolor. Cillum do labore dolor consectetur fugiat enim voluptate. Sunt esse commodo laboris ut ipsum tempor nisi amet id anim aliqua aliquip fugiat.</p>
 
-                <img class="responsive-img fade-in" src="{% static 'franck-v-628397-unsplash.jpg' %}" alt="">
+                <p class="custom-font-1">
+                    Through this project we have learnt various ins and out of Databases and how to showcase various queries to the frontend using 
+                    Django and Javascript. 
+                </p>
+                
+                <img class="responsive-img fade-in" src="{% static 'homepage_database.jpg' %}" alt="">
             </div>
         </div>
 
