--- a/templates/bid-summary.html
+++ b/templates/bid-summary.html
@@ -28,6 +28,7 @@
                 </div>
             </div>
             {% endfor %}
+            <a href="{% url 'app:confirm-bids' %}" style="margin-top: 1rem;" class="btn waves-light waves-effect pink">Confirm Bids</a>
         </div> <!-- End row -->
     </div>
 </section>
